2008-06-20  wcohen  <wcohen@redhat.com>

	* stapfuncs.5.in: Add documentation for tapset/dev.stp functions.

2008-06-18  Josh Stone  <joshua.i.stone@intel.com>

	PR 6644
	* elaborate.cxx (dead_stmtexpr_remover::visit_block): Flatten nested
	block statements into a single block.
	(dead_stmtexpr_remover::visit_if_statement): Remove the possibility
	of if_statements with a null thenblock.  When an if lacks both then
	and else, either remove it completely or reduce it to a simple
	statment evaluating the condition.  With an else and no then, invert
	the condition and else becomes then.
	(void_statement_reducer): New optimization visitor that breaks
	statements in void context into smaller pieces, to expose more
	optimization opportunities.
	(semantic_pass_opt5, semantic_pass_opt6): Bump opt5 to opt6, and
	create a new opt5 that runs through void_statement_reducer.

2008-06-16  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (print_locals): Produce nothing instead of
	"(alternatives: (none found))" if no alternatives were found.

2008-06-16  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (session::print_warning): Change to take optional
	token as argument.
	(*): Adjust callers of print_warning() to pass a token.
	(print_token): New function, eliminate recent file name duplication.
	(print_error): Use it too.
	(semantic_pass_opt2): Tweak way read-only vars' alternatives are
	printed.  Eliminate relaxation-loop duplicates by printing warnings
	only on first iteration.  Print alternatives for globals too.
	* session.h: Corresponding changes.

2008-06-16  Stan Cox  <scox@redhat.com>

	* elaborate.cxx (semantic_pass_opt2): Only create function
	alternatives if needed.  Overload compare.

2008-06-13  Stan Cox  <scox@redhat.com>

	* elaborate.cxx (print_warning): Add optional_str parameter.
	(semantic_pass_opt2): List variable alternatives for probes and
	functions.
	* session.h (print_warning): Add optional_str parameter.
